[package]
name = "node_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-std = "1.10"
pg_db_con ={version = "0.1.0", path = "./pg_db_con"}
chain_service ={version = "0.1.0", path = "./chain_service"}
rpc ={version = "0.1.0", path = "./rpc"}
workflow ={version = "0.1.0", path = "./workflow"}
structopt = "0.3"
thiserror = "1.0.22"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.20"
log4rs = "1.0"
env_logger = "0.9.3"
warp = "0.3.2"
once_cell = "1.13.0"
futures = "0.3"