[package]
name = "chain_service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
async-trait = "0.1"
once_cell = "1.19.0"
log = "0.4.22"
async-throttle = "0.3"
futures = "0.3.30"