[package]
name = "pg_db_con"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres="*"
r2d2_postgres = "0.18.1"
bb8-postgres = "0.7.0"
tokio = { version = "1.37.0" ,features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.203", features = ["derive"] }
prost = "0.12.6"
log = "0.4.22"
once_cell = "1.19.0"